--- a/InvoiceManager/InvoiceManager.csproj
+++ b/InvoiceManager/InvoiceManager.csproj
@@ -173,9 +173,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202311261927251_init.cs" />
-    <Compile Include="Migrations\202311261927251_init.designer.cs">
-      <DependentUpon>202311261927251_init.cs</DependentUpon>
+    <Compile Include="Migrations\202311271810131_init.cs" />
+    <Compile Include="Migrations\202311271810131_init.designer.cs">
+      <DependentUpon>202311271810131_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Domains\Address.cs" />
@@ -192,6 +192,7 @@
     <Compile Include="Models\ViewModels\ChangePasswordViewModel.cs" />
     <Compile Include="Models\ViewModels\EditInvoicePositionViewModel.cs" />
     <Compile Include="Models\ViewModels\EditInvoiceViewModel.cs" />
+    <Compile Include="Models\ViewModels\EditProductViewModel.cs" />
     <Compile Include="Models\ViewModels\FactorViewModel.cs" />
     <Compile Include="Models\ViewModels\ForgotPasswordViewModel.cs" />
     <Compile Include="Models\ViewModels\ExternalLoginConfirmationViewModel.cs" />
@@ -391,8 +392,9 @@
     <Content Include="Views\Home\_InvoicePosition.cshtml" />
     <Content Include="Views\Home\InvoicePosition.cshtml" />
     <Content Include="Views\Print\InvoiceTemplate.cshtml" />
-    <Content Include="Views\Product\Products.cshtml" />
+    <Content Include="Views\Product\Product.cshtml" />
     <Content Include="Views\Client\Client.cshtml" />
+    <Content Include="Views\Product\ProductForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -425,8 +427,8 @@
     <Content Include="Scripts\jquery-3.7.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202311261927251_init.resx">
-      <DependentUpon>202311261927251_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202311271810131_init.resx">
+      <DependentUpon>202311271810131_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
